scrollbar shown. date fixed while scrolling

--- a/moodlev2-client-react-app/src/shared/components/calendar/Calendar.css
+++ b/moodlev2-client-react-app/src/shared/components/calendar/Calendar.css
@@ -94,9 +94,6 @@
   padding: 2em 0.5em;
 }
 .react-calendar__tile {
-  max-height: 8rem;
-  overflow: auto !important;
-  scrollbar-width: none;
   max-width: 100%;
   padding: 10px 6.6667px;
   background: none;
@@ -104,11 +101,6 @@
   /* line-height: 16px; */
   line-height: 100%;
   /* border-radius: 50%; */
-}
-.react-calendar__tile::-webkit-scrollbar {
-  /* WebKit */
-  width: 0;
-  height: 0;
 }
 .react-calendar__tile:disabled {
   background-color: #f0f0f0;
